--- a/springboot-mssql-jpa-hibernate-crud-example/src/main/resources/application.properties
+++ b/springboot-mssql-jpa-hibernate-crud-example/src/main/resources/application.properties
@@ -3,10 +3,13 @@ spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerC
 spring.datasource.username=sa
 spring.datasource.password=123
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql = true
-# Hibernate ddl auto (create, create-drop, validate, update)
+
 spring.jpa.hibernate.ddl-auto = update
 
 server.port=8082
 
+access.token.expired=360
+refresh.token.expired=1440
+secret.key=YRYUYRE&34234jvhfue47fh
